--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,86 @@
-# Compiled class file
+# Compiled class files
 *.class
 
-# Log file
+# Log files
 *.log
+logs/
+*.out
 
-# BlueJ files
-*.ctxt
+# Eclipse & IntelliJ IDEA
+/.idea/
+/*.iml
+/.classpath
+/.project
+/.settings/
+/target/
+/bin/
+/out/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Maven
+/.mvn/
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Gradle
+.gradle/
+build/
+!gradle-wrapper.jar
+.gradle-cache/
+/gradle/wrapper/gradle-wrapper.properties
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Node modules (if using Node.js with Java)
+node_modules/
+
+# VS Code
+.vscode/
+
+# OS-generated files
+.DS_Store
+Thumbs.db
+
+# JetBrains Rider
+.idea/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/libraries/
+.idea/shelf/
+.idea/vcs.xml
+*.iws
+
+# Temporary files
+*.swp
+*.swo
+*.bak
+*.tmp
+
+# Lombok generated files
+**/lombok.config
+
+# Application-specific
+.env
+*.key
+*.pem
+*.p12
+*.crt
+*.cert
+*.jks
+*.keystore
+
+# Docker
+/docker/
+/docker-compose.yml
+/docker-compose.override.yml
+
+# Kubernetes
+/k8s/
+
+# LocalStack
+.localstack/
+
+# AWS credentials
+.aws/
